Add name to install step
Co-authored-by: Felix Angelov <felangelov@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -4,5 +4,6 @@ runs:
   using: "composite"
   steps:
     - id: install
+      name: Install Shorebird
       run: curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | sh
       shell: bash
