Add install-flutter step

--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,11 @@ description: 'Installs shorebird'
 runs:
   using: "composite"
   steps:
-    - id: install
-      name: Install Shorebird
+    - name: install-flutter
+      uses: subosito/flutter-action@v2
+      with:
+        channel: stable
+        flutter-version: 3.7.8
+    - name: Install Shorebird
       run: curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | sh
       shell: bash
