Update install-flutter name to "Install Flutter"
Co-authored-by: Felix Angelov <felangelov@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'Installs shorebird'
 runs:
   using: "composite"
   steps:
-    - name: install-flutter
+    - name: Install Flutter
       uses: subosito/flutter-action@v2
       with:
         channel: stable
