Add shorebird to GITHUB_PATH after install

--- a/action.yml
+++ b/action.yml
@@ -9,5 +9,7 @@ runs:
         channel: stable
         flutter-version: 3.7.8
     - name: Install Shorebird
-      run: curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | sh
+      run: |
+        curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | sh
+        echo "/home/runner/.config/shorebird/bin" >> $GITHUB_PATH
       shell: bash
