--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,9 @@
 name: 'Install Shorebird'
 description: 'Installs shorebird'
+outputs:
+  INSTALL_PATH:
+    description: "The path of the shorebird binary"
+    value: '${{ steps.install-shorebird.outputs.INSTALL_PATH }}'
 runs:
   using: "composite"
   steps:
@@ -9,8 +13,10 @@ runs:
         channel: stable
         flutter-version: 3.7.8
     - name: Install Shorebird
+      id: install-shorebird
       run: |
         curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | sh
-        install_dir=$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.shorebird" || printf %s "${XDG_CONFIG_HOME}/shorebird")
-        echo $install_dir >> $GITHUB_PATH
+        install_path=$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.shorebird" || printf %s "${XDG_CONFIG_HOME}/shorebird")
+        echo $install_path >> $GITHUB_PATH
+        echo "INSTALL_PATH=$(echo $install_path)" >> $GITHUB_OUTPUT
       shell: bash
