Add /bin to install_path

--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,6 @@ runs:
       run: |
         curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | sh
         install_path=$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.shorebird" || printf %s "${XDG_CONFIG_HOME}/shorebird")
-        echo $install_path >> $GITHUB_PATH
-        echo "added $install_path to GITHUB_PATH"
+        echo $install_path/bin >> $GITHUB_PATH
+        echo "added $install_path/bin to GITHUB_PATH"
       shell: bash
