--- a/action.yml
+++ b/action.yml
@@ -1,18 +1,13 @@
-name: 'Install Shorebird'
-description: 'Installs shorebird'
+name: Setup Shorebird
+description: Install Shorebird CLI
+
 runs:
-  using: "composite"
+  using: composite
   steps:
-    - name: Install Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        channel: stable
-        flutter-version: 3.7.8
     - name: Install Shorebird
-      id: install-shorebird
       run: |
         curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | sh
         install_path=$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.shorebird" || printf %s "${XDG_CONFIG_HOME}/shorebird")
         echo $install_path/bin >> $GITHUB_PATH
         echo "added $install_path/bin to GITHUB_PATH"
-      shell: bash
+      shell: sh
