--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,6 @@ runs:
         Set-ExecutionPolicy RemoteSigned -scope CurrentUser # Needed to execute remote scripts
         iwr -UseBasicParsing 'https://raw.githubusercontent.com/shorebirdtech/install/main/install.ps1'|iex
         $installDirectory = [IO.Path]::Combine($home, ".shorebird")
-        Write-Output $installDirectory | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        Write-Output "added $installDirectory/bin to GITHUB_PATH"
+        Add-Content $env:GITHUB_PATH "$installDirectory\bin"
+        Write-Output "added $installDirectory\bin to GITHUB_PATH"
       shell: pwsh
