--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,39 +9,26 @@ jobs:
   semantic-pull-request:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/semantic_pull_request.yml@v1
 
-  e2e-macos-linux:
+  e2e:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: ./
-        with: 
-          is_windows: ${{ matrix.os == 'windows-latest' }}
-      - run: |
+      - if: runner.os != 'Windows'
+        run: |
           if [[ $(shorebird --version) =~ "Shorebird Engine • revision" ]]; then          
             echo '✅ Shorebird CLI is installed!'
           else
             echo '❌ Shorebird CLI is not installed.'
             exit 1
           fi
-
-  e2e-windows:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [windows-latest]
-
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./
-        with: 
-          is_windows: ${{ matrix.os == 'windows-latest' }}
-      - run: |
+      - if: runner.os == 'Windows'
+        run: |
           $shorebird_version = shorebird --version
           if ($shorebird_version -match "Shorebird Engine") {
             Write-Output "✅ Shorebird CLI is installed!"
