--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ runs:
   using: composite
   steps:
     - name: 🐦 Install Shorebird (macOS / Linux)
-      if: runner.os != 'Windows
+      if: runner.os != 'Windows'
       run: |
         curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | bash -s -- --force
         install_path=$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.shorebird" || printf %s "${XDG_CONFIG_HOME}/shorebird")
@@ -17,7 +17,7 @@ runs:
         echo "added $install_path/bin to GITHUB_PATH"
       shell: bash
     - name: 🐦 Install Shorebird (Windows)
-      if: runner.os == 'Windows
+      if: runner.os == 'Windows'
       run: |
         Set-ExecutionPolicy RemoteSigned -scope CurrentUser # Needed to execute remote scripts
         iwr -UseBasicParsing 'https://raw.githubusercontent.com/shorebirdtech/install/main/install.ps1'|iex
