feat: add support for windows (#7)
* feat: add support for windows

* fix powershell verification

* fix more powershell

* fix more powershell

* cleanup

* add missing trailing quote

--- a/action.yml
+++ b/action.yml
@@ -8,10 +8,20 @@ branding:
 runs:
   using: composite
   steps:
-    - name: 🐦 Install Shorebird
+    - name: 🐦 Install Shorebird (macOS / Linux)
+      if: runner.os != 'Windows'
       run: |
         curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | bash -s -- --force
         install_path=$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.shorebird" || printf %s "${XDG_CONFIG_HOME}/shorebird")
         echo $install_path/bin >> $GITHUB_PATH
         echo "added $install_path/bin to GITHUB_PATH"
       shell: bash
+    - name: 🐦 Install Shorebird (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        Set-ExecutionPolicy RemoteSigned -scope CurrentUser # Needed to execute remote scripts
+        iwr -UseBasicParsing 'https://raw.githubusercontent.com/shorebirdtech/install/main/install.ps1'|iex
+        $installDirectory = [IO.Path]::Combine($home, ".shorebird")
+        Add-Content $env:GITHUB_PATH "$installDirectory\bin"
+        Write-Output "added $installDirectory\bin to GITHUB_PATH"
+      shell: pwsh
