--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,14 +10,29 @@ jobs:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/semantic_pull_request.yml@v1
 
   e2e:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: ./
-      - run: |
+      - if: runner.os != 'Windows'
+        run: |
           if [[ $(shorebird --version) =~ "Shorebird Engine • revision" ]]; then          
             echo '✅ Shorebird CLI is installed!'
           else
             echo '❌ Shorebird CLI is not installed.'
             exit 1
           fi
+      - if: runner.os == 'Windows'
+        run: |
+          $shorebird_version = shorebird --version
+          if ($shorebird_version -match "Shorebird Engine") {
+            Write-Output "✅ Shorebird CLI is installed!"
+          } else {
+            Write-Output "❌ Shorebird CLI is not installed."
+            exit 1
+          }
