--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,7 @@ jobs:
       - uses: ./
       - if: runner.os != 'Windows'
         run: |
-          if [[ $(shorebird --version) =~ "Shorebird Engine • revision" ]]; then          
+          if [[ $(shorebird --version) =~ "Engine • revision" ]]; then          
             echo '✅ Shorebird CLI is installed!'
           else
             echo '❌ Shorebird CLI is not installed.'
@@ -30,7 +30,7 @@ jobs:
       - if: runner.os == 'Windows'
         run: |
           $shorebird_version = shorebird --version
-          if ($shorebird_version -match "Shorebird Engine") {
+          if ($shorebird_version -match "Engine") {
             Write-Output "✅ Shorebird CLI is installed!"
           } else {
             Write-Output "❌ Shorebird CLI is not installed."
