feat: cache support

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./
+        with:
+          cache: true
       - if: runner.os != 'Windows'
         run: |
           if [[ $(shorebird --version) =~ "Engine • revision" ]]; then          
