--- a/action.yml
+++ b/action.yml
@@ -14,19 +14,34 @@ inputs:
 runs:
   using: composite
   steps:
-    - if: ${{ inputs.cache == 'true' }}
-      name: 💾 Configure Shorebird Cache
+    - name: Determine Install Path (MacOS / Linux)
+      if: ${{ runner.os != 'Windows' }}
+      id: install-path
+      run: |
+        install_path=$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.shorebird" || printf %s "${XDG_CONFIG_HOME}/shorebird")
+        echo $install_path >> $GITHUB_ENV
+      shell: bash
+
+    - name: Determine Install Path (Windows)
+      if: ${{ runner.os == 'Windows' }}
+      id: install-path
+      run: |
+        $installDirectory = [IO.Path]::Combine($home, ".shorebird")
+        install_path=$installDirectory >> $env:GITHUB_ENV
+      shell: pwsh
+
+    - name: 💾 Configure Shorebird Cache
       id: cache-shorebird
       uses: actions/cache@v4
       with:
-        path: ${{ runner.home }}\.shorebird
+        path: ${{ steps.install-path.outputs.install-path }}
         key: shorebird-cache-key-${{ runner.os }}-${{ runner.arch }}
 
     - name: 🐦 Install Shorebird (MacOS / Linux)
       if: ${{ steps.cache-shorebird.outputs.cache-hit != 'true' && runner.os != 'Windows' }}
       run: |
         curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | bash -s -- --force
-        install_path=$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.shorebird" || printf %s "${XDG_CONFIG_HOME}/shorebird")
+        install_path=${{ steps.install-path.outputs.install-path }}
         echo $install_path/bin >> $GITHUB_PATH
         echo "added $install_path/bin to GITHUB_PATH"
       shell: bash
@@ -36,7 +51,7 @@ runs:
       run: |
         Set-ExecutionPolicy RemoteSigned -scope CurrentUser # Needed to execute remote scripts
         iwr -UseBasicParsing 'https://raw.githubusercontent.com/shorebirdtech/install/main/install.ps1'|iex
-        $installDirectory = [IO.Path]::Combine($home, ".shorebird")
+        $installDirectory = ${{ steps.install-path.outputs.install-path }}
         Add-Content $env:GITHUB_PATH "$installDirectory\bin"
         Write-Output "added $installDirectory\bin to GITHUB_PATH"
       shell: pwsh
@@ -49,14 +64,4 @@ runs:
     - name: 🍄 Ensure Shorebird is Up-to-Date (Windows)
       if: ${{ steps.cache-shorebird.outputs.cache-hit == 'true' && runner.os == 'Windows' }}
       run: shorebird upgrade
-      shell: pwsh
-
-    - name: 🧑‍⚕️ Shorebird Doctor (MacOS / Linux)
-      if: ${{ runner.os != 'Windows' }}
-      run: shorebird doctor
-      shell: bash
-
-    - name: 🧑‍⚕️ Shorebird Doctor (Windows)
-      if: ${{ runner.os == 'Windows' }}
-      run: shorebird doctor
       shell: pwsh
