--- a/action.yml
+++ b/action.yml
@@ -16,32 +16,39 @@ runs:
   steps:
     - name: Determine Install Path (MacOS / Linux)
       if: ${{ runner.os != 'Windows' }}
-      id: install-path
+      id: install-path-unix
       run: |
         install_path=$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.shorebird" || printf %s "${XDG_CONFIG_HOME}/shorebird")
-        echo $install_path >> $GITHUB_ENV
+        echo install_path=$install_path >> $GITHUB_ENV
       shell: bash
 
     - name: Determine Install Path (Windows)
       if: ${{ runner.os == 'Windows' }}
-      id: install-path
+      id: install-path-windows
       run: |
-        $installDirectory = [IO.Path]::Combine($home, ".shorebird")
-        install_path=$installDirectory >> $env:GITHUB_ENV
+        $install_path = [IO.Path]::Combine($home, ".shorebird")
+        install_path=$install_path >> $env:GITHUB_ENV
       shell: pwsh
 
-    - name: 💾 Configure Shorebird Cache
+    - name: 💾 Configure Shorebird Cache (MacOS / Linux)
       id: cache-shorebird
       uses: actions/cache@v4
       with:
-        path: ${{ steps.install-path.outputs.install-path }}
+        path: ${{ steps.install-path.outputs.install-path-unix }}
+        key: shorebird-cache-key-${{ runner.os }}-${{ runner.arch }}
+
+    - name: 💾 Configure Shorebird Cache (Windows)
+      id: cache-shorebird
+      uses: actions/cache@v4
+      with:
+        path: ${{ steps.install-path.outputs.install-path-windows }}
         key: shorebird-cache-key-${{ runner.os }}-${{ runner.arch }}
 
     - name: 🐦 Install Shorebird (MacOS / Linux)
       if: ${{ steps.cache-shorebird.outputs.cache-hit != 'true' && runner.os != 'Windows' }}
       run: |
         curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | bash -s -- --force
-        install_path=${{ steps.install-path.outputs.install-path }}
+        install_path=${{ steps.install-path-unix.outputs.install_path }}
         echo $install_path/bin >> $GITHUB_PATH
         echo "added $install_path/bin to GITHUB_PATH"
       shell: bash
@@ -51,7 +58,7 @@ runs:
       run: |
         Set-ExecutionPolicy RemoteSigned -scope CurrentUser # Needed to execute remote scripts
         iwr -UseBasicParsing 'https://raw.githubusercontent.com/shorebirdtech/install/main/install.ps1'|iex
-        $installDirectory = ${{ steps.install-path.outputs.install-path }}
+        $installDirectory = ${{ steps.install-path-windows.outputs.install_path }}
         Add-Content $env:GITHUB_PATH "$installDirectory\bin"
         Write-Output "added $installDirectory\bin to GITHUB_PATH"
       shell: pwsh
