--- a/action.yml
+++ b/action.yml
@@ -31,21 +31,21 @@ runs:
       shell: pwsh
 
     - name: 💾 Configure Shorebird Cache (MacOS / Linux)
-      id: cache-shorebird
+      id: cache-shorebird-unix
       uses: actions/cache@v4
       with:
         path: ${{ steps.install-path.outputs.install-path-unix }}
         key: shorebird-cache-key-${{ runner.os }}-${{ runner.arch }}
 
     - name: 💾 Configure Shorebird Cache (Windows)
-      id: cache-shorebird
+      id: cache-shorebird-windows
       uses: actions/cache@v4
       with:
         path: ${{ steps.install-path.outputs.install-path-windows }}
         key: shorebird-cache-key-${{ runner.os }}-${{ runner.arch }}
 
     - name: 🐦 Install Shorebird (MacOS / Linux)
-      if: ${{ steps.cache-shorebird.outputs.cache-hit != 'true' && runner.os != 'Windows' }}
+      if: ${{ steps.cache-shorebird-unix.outputs.cache-hit != 'true' && runner.os != 'Windows' }}
       run: |
         curl --proto '=https' --tlsv1.2 https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh -sSf | bash -s -- --force
         install_path=${{ steps.install-path-unix.outputs.install_path }}
@@ -54,7 +54,7 @@ runs:
       shell: bash
 
     - name: 🐦 Install Shorebird (Windows)
-      if: ${{ steps.cache-shorebird.outputs.cache-hit != 'true' && runner.os == 'Windows' }}
+      if: ${{ steps.cache-shorebird-windows.outputs.cache-hit != 'true' && runner.os == 'Windows' }}
       run: |
         Set-ExecutionPolicy RemoteSigned -scope CurrentUser # Needed to execute remote scripts
         iwr -UseBasicParsing 'https://raw.githubusercontent.com/shorebirdtech/install/main/install.ps1'|iex
@@ -64,11 +64,11 @@ runs:
       shell: pwsh
 
     - name: 🍄 Ensure Shorebird is Up-to-Date (MacOS / Linux)
-      if: ${{ steps.cache-shorebird.outputs.cache-hit == 'true' && runner.os != 'Windows' }}
+      if: ${{ steps.cache-shorebird-unix.outputs.cache-hit == 'true' && runner.os != 'Windows' }}
       run: shorebird upgrade
       shell: bash
 
     - name: 🍄 Ensure Shorebird is Up-to-Date (Windows)
-      if: ${{ steps.cache-shorebird.outputs.cache-hit == 'true' && runner.os == 'Windows' }}
+      if: ${{ steps.cache-shorebird-windows.outputs.cache-hit == 'true' && runner.os == 'Windows' }}
       run: shorebird upgrade
       shell: pwsh
